[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gui/Struct/StructVec3.gd" type="Script" id=1]

[node name="StructVec3" type="HBoxContainer"]
anchor_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="SpinBox" parent="."]
margin_right = 338.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 0.0
value = 0.1
allow_greater = true
allow_lesser = true
prefix = "x"

[node name="Y" type="SpinBox" parent="."]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 0.0
value = 0.1
allow_greater = true
allow_lesser = true
prefix = "y"

[node name="Z" type="SpinBox" parent="."]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 0.0
value = 0.1
allow_greater = true
allow_lesser = true
prefix = "z"
[connection signal="value_changed" from="X" to="." method="_on_X_value_changed"]
[connection signal="value_changed" from="Y" to="." method="_on_Y_value_changed"]
[connection signal="value_changed" from="Z" to="." method="_on_Z_value_changed"]
